[package]
name = "shade_first_example"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["my_shader", "levenshtein_shader"]

[dependencies]
wgpu = { version = "25.0", features = ["spirv"] }
env_logger = "0.11.7"
pollster = "0.4.0"
futures-intrusive = "0.5"
bytemuck = "1.22.0"

[build-dependencies]
spirv-builder = { version = "0.9", git = "https://github.com/Rust-GPU/rust-gpu.git" }

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3
